# 3d-typer

./: .env.development  .env.production  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  README.md  package-lock.json  package.json  tsconfig.json
.circleci/: config.yml
.github/workflows/: backend.yml  deployment.yml  frontend.yml  rust.yml
backend/: .env  .gitignore  Cargo.toml  Rocket.toml
backend/src/: main.rs  message.rs  routes.rs  schema.rs
backend/src/routes/: auth.rs  message.rs
public/: index.html
src/: App.css  App.tsx  application.tsx  auth.ts  index.css  index.tsx
src/routes/: login.tsx  logout.tsx  play.tsx  signup.tsx
