[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
serde = { version = "1.0.137", features = ["derive"] }
uuid = { version = "1.1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
