[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets", "tls"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rocket_auth = { version = "0.4.0", features = [
	"sqlx-postgres",
], default-features = false }
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres"] }
